# delta_perception

./: .gitignore  CMakeLists.txt  README.md  package.xml  perception.rviz
darknet/: Makefile  darknet.py  darknet_video.py  obj.data  obj.names  train.txt
darknet/cfg/: coco.data  yolo-rc_car.cfg
erfnet/: clustering.py  crop.py  curve_fitting.py  lane_detection.py  lane_filter.py  lane_polygon.py  lane_validator.py
erfnet/models/: erfnet.py
ipm/: camera_info.yaml  ipm.py
lanenet/: lanenet.py
lanenet/encoder_decoder_model/: dense_encoder.py  fcn_decoder.py  vgg_encoder.py
lanenet/lanenet_model/: lanenet_cluster.py  lanenet_merge_model.py
launch/: camera_radar.launch  delta_perception.launch  inverse_persepective_mapping.launch  lane_detection.launch  lane_validation.launch  object_detection.launch  perception.launch  perception_offline.launch  perception_online.launch  perception_pipeline.launch  play_rosbag.launch  segmentation.launch
msg/: CameraTrack.msg  CameraTrackArray.msg  LaneMarking.msg  LaneMarkingArray.msg  MarkerArrayStamped.msg  VehicleGroundTruth.msg  VehicleGroundTruthArray.msg
scripts/: README.md  cube_marker_publisher.py  init_paths.py  ipm_node.py  lane_detection.py  lane_validation.py  main.py  marker_array_publisher.py  occupancy_grid.py  segmentation.py  test.py  utils.py  visualize_radar.py
segmentation/: README.md  demo.sh  inference.py  segmentation.py  setup.sh
segmentation/configs/: single_stage_icnet_1.0_1025_resnet_v1.config
segmentation/libs/: constants.py
test/: README.md  occupancy_grid_test.py  vehicle_ground_truth_publisher_test.py  vehicle_message_publisher.py
tracker/: README.md
validator/: calculate_map.py  validator.py
